// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": true
    }
  }
}"
`;

exports[`dependent output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"weird-long-running-resource\\": {
        \\"name\\": \\"foo\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/weird-long-running-resource\\",
            \\"uniqueId\\": \\"weird-long-running-resource\\"
          }
        }
      }
    }
  },
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": 1,
      \\"depends_on\\": [
        \\"\${test_resource.weird-long-running-resource}\\"
      ]
    }
  }
}"
`;

exports[`description output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": 1,
      \\"description\\": \\"test-description\\"
    }
  }
}"
`;

exports[`list output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": [
        \\"foo\\",
        \\"bar\\"
      ]
    }
  }
}"
`;

exports[`map output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": {
        \\"foo\\": \\"bar\\"
      }
    }
  }
}"
`;

exports[`number output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": 1
    }
  }
}"
`;

exports[`sensitive output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": 1,
      \\"sensitive\\": true
    }
  }
}"
`;

exports[`string output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": \\"1\\"
    }
  }
}"
`;
